--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -21,12 +21,13 @@ jobs:
     - name: Analysing the code with gdlint
       run: |
         gdformat $(git ls-files '*.gd')
+    - name: setup git config
+      run: |
+        git config user.name "zqwy01"
+        git config user.email "zqwymusic@vk.com"
+        
     - name: Commit to Release
       run: |
-        git config --global user.email "zqwymusic@vk.com"
-        git config --global user.name "GitHub Actions"
         git add *
         git commit -m "First Commit"
-        git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
-        git push
-        
+        git push origin master
