--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -30,4 +30,4 @@ jobs:
       run: |
         git add -A
         git commit -m "Test"
-        git push origin master
+        git push origin main
